[gd_scene load_steps=2 format=3 uid="uid://qlfw6h6hgxxi"]

[ext_resource type="Script" path="res://HUDs/gameoverHUD/game_over_hud.gd" id="1_odsmy"]

[node name="GameOverHUD" type="CanvasLayer"]
script = ExtResource("1_odsmy")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 64
text = "Start Game"

[node name="QuitButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -340.0
offset_right = 250.0
offset_bottom = -190.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 64
text = "Quit Game"

[node name="GameNameLabel" type="Label" parent="."]
offset_left = 660.0
offset_top = 240.0
offset_right = 1260.0
offset_bottom = 440.0
theme_override_font_sizes/font_size = 120
text = "DeceIT"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
